--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -1,12 +1,77 @@
-* {
-  border: 1px solid red; }
-
 .container {
-  max-height: 900px;
-  height: 100%; }
+  max-width: 900px;
+  width: 100%;
+  padding: 0; }
 
-.main {
+.textcontainer {
+  max-width: 560px;
+  width: 100%; }
+
+.smalltextcontainer {
+  max-width: 430px;
+  width: 100%; }
+
+.smalltext {
+  font-size: 15px;
+  font-family: "Lato";
+  color: white;
+  line-height: 1.933;
+  letter-spacing: 0.06ex; }
+
+.bigtext {
+  font-size: 50px;
+  font-family: "Lato";
+  color: white;
+  font-weight: bold;
+  letter-spacing: 0.32ex; }
+
+body .main {
   max-width: 1920px;
   width: 100%; }
+  body .main .header {
+    background-image: url("http://i68.tinypic.com/2vijwbl.png");
+    overflow-x: hidden;
+    background-size: cover;
+    background-position: center;
+    height: 1070px; }
+    body .main .header .eclipse {
+      display: block;
+      margin: 0 auto;
+      margin-top: 280px; }
+    body .main .header p {
+      display: block;
+      margin: 0 auto;
+      margin-top: 50px;
+      text-align: center;
+      text-transform: uppercase; }
+    body .main .header a > img {
+      display: block;
+      margin: 0 auto;
+      margin-top: 240px;
+      transition: 2s; }
+    body .main .header a > img:hover {
+      -webkit-transform: rotate(360deg);
+              transform: rotate(360deg); }
+  body .main .aboutus .quadro {
+    border: 1px solid black;
+    margin: 160px 0;
+    padding-bottom: 60px; }
+    body .main .aboutus .quadro h1 {
+      font-size: 55.94px;
+      font-family: "Lato";
+      color: #3c3c3c;
+      font-weight: bold;
+      text-transform: uppercase;
+      text-align: center;
+      width: 420px;
+      margin: 0 auto;
+      position: relative;
+      top: -40px;
+      background-color: white; }
+  body .main .aboutus p {
+    display: block;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center; }
 
 /*# sourceMappingURL=style.prefixed.css.map */
