--- a/sass/style.scss
+++ b/sass/style.scss
@@ -56,7 +56,7 @@ body {
 				display: block;
 				margin: 0 auto;
 				margin-top: 240px;
-				transition: 2s;
+				transition: 1s;
 			}
 			a > img:hover  {
 				transform: rotate(360deg);
@@ -64,7 +64,7 @@ body {
 		}
 		.aboutus {
 			.quadro {
-				border: 1px solid black;
+				border: 2px solid black;
 				margin: 160px 0;
 				padding-bottom: 60px;
 				h1 {
@@ -79,13 +79,70 @@ body {
 					position: relative;
 					top: -40px;
 					background-color: white;
-					}
-				}p {
+				}
+				p {
 					display: block;
 					margin: 0 auto;
 					margin-top: 50px;
 					text-align: center;
 				}
+			}
 		}
+		.service {
+			background-image: url("http://i63.tinypic.com/2u93lht.png");
+			overflow-x: hidden;
+			background-size: cover;
+			background-position: center;
+			.quadro {
+				border: 2px solid white;
+				margin: 120px 0 110px 0;
+				padding-bottom: 60px;
+				h1 {
+					font-size: 55.94px;
+					font-family: "Lato";
+					color: white;
+					font-weight: bold;
+					text-transform: uppercase;
+					text-align: center;
+					width: 420px;
+					margin: 0 auto;
+					position: relative;
+					top: -40px;
+					background-image: url("http://i63.tinypic.com/2u93lht.png");
+					background-size: 1920px 490px;
+					background-position-x: 50%;
+					background-position-y: 20%;
+					
+				}
+				p {
+					display: block;
+					margin: 0 auto;
+					text-align: center;
+					color: white;
+				}
+			}
+		}
+		.whatwedo {
+			height: 1400px;
+			.quadro {
+				border: 2px solid black;
+				margin: 160px 0;
+				h1 {
+					font-size: 55.94px;
+					font-family: "Lato";
+					color: black;
+					font-weight: bold;
+					text-transform: uppercase;
+					text-align: center;
+					width: 420px;
+					margin: 0 auto;
+					position: relative;
+					top: -40px;
+					background-color: white;
+					
+				}
+			}
+		}
+
 	}
 }
