--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -1,3 +1,6 @@
+* {
+  border: 1px solid red; }
+
 .container {
   max-width: 900px;
   width: 100%;
@@ -102,22 +105,38 @@ body .main {
         margin: 0 auto;
         text-align: center;
         color: white; }
-  body .main .whatwedo {
-    height: 1400px; }
-    body .main .whatwedo .quadro {
-      border: 2px solid black;
-      margin: 160px 0; }
-      body .main .whatwedo .quadro h1 {
-        font-size: 55.94px;
-        font-family: "Lato";
-        color: black;
-        font-weight: bold;
-        text-transform: uppercase;
-        text-align: center;
-        width: 420px;
-        margin: 0 auto;
-        position: relative;
-        top: -40px;
-        background-color: white; }
+  body .main .whatwedo .quadro {
+    border: 2px solid black;
+    margin: 160px 0;
+    padding-bottom: 90px; }
+    body .main .whatwedo .quadro h1 {
+      font-size: 55.94px;
+      font-family: "Lato";
+      color: black;
+      font-weight: bold;
+      text-transform: uppercase;
+      text-align: center;
+      width: 420px;
+      margin: 0 auto;
+      position: relative;
+      top: -40px;
+      background-color: white; }
+    body .main .whatwedo .quadro a > img {
+      display: block;
+      margin: 0 auto;
+      transition: 1s;
+      width: 100px;
+      margin-top: 100px; }
+    body .main .whatwedo .quadro a > img:hover {
+      -webkit-transform: rotate(360deg);
+              transform: rotate(360deg); }
+    body .main .whatwedo .quadro h3 {
+      text-align: center;
+      margin-top: 40px; }
+    body .main .whatwedo .quadro p {
+      display: block;
+      margin: 0 auto;
+      margin-top: 40px;
+      text-align: center; }
 
 /*# sourceMappingURL=style.prefixed.css.map */
