--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 * {
-	border: 1px solid red;	
+	// border: 1px solid red;	
 
 	// border: 1px solid green;
 }
@@ -160,6 +160,44 @@ body {
 					margin-top: 40px;
 					text-align: center;
 				}
+			}
+		}
+		.ourworks {
+			.pic1 {
+				width: 548px;
+				height: 237px;
+				display: inline-block;
+				background-image: url("http://i64.tinypic.com/2ef0vwm.png");
+			}
+			.pic2 {
+				width: 802px;
+				height: 237px;
+				display: inline-block;
+				background-image: url("http://i63.tinypic.com/4joysl.png");
+			}
+			.pic3 {
+				width: 550px;
+				height: 237px;
+				display: inline-block;
+				background-image: url("http://i67.tinypic.com/dn28w4.png");
+			}
+			.pic4 {
+				width: 548px;
+				height: 237px;
+				display: inline-block;
+				background-image: url("http://i66.tinypic.com/10cuigx.png");
+			}
+			.pic5 {
+				width: 802px;
+				height: 237px;
+				display: inline-block;
+				background-image: url("http://i68.tinypic.com/x8vvc.png");
+			}
+			.pic6 {
+				width: 550px;
+				height: 237px;
+				display: inline-block;
+				background-image: url("http://i68.tinypic.com/14t1z01.png");
 			}
 		}
 
