--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -1,3 +1,6 @@
+* {
+  border: 1px solid red; }
+
 .container {
   max-width: 900px;
   width: 100%;
@@ -165,5 +168,32 @@ body .main {
     height: 237px;
     display: inline-block;
     background-image: url("http://i68.tinypic.com/14t1z01.png"); }
+  body .main .contactus .quadro {
+    border: 2px solid black;
+    margin: 160px 0;
+    padding-bottom: 60px; }
+    body .main .contactus .quadro h1 {
+      font-size: 55.94px;
+      font-family: "Lato";
+      color: #3c3c3c;
+      font-weight: bold;
+      text-transform: uppercase;
+      text-align: center;
+      width: 420px;
+      margin: 0 auto;
+      position: relative;
+      top: -40px;
+      background-color: white; }
+    body .main .contactus .quadro p {
+      display: block;
+      margin: 0 auto;
+      margin-top: 50px;
+      text-align: center; }
+  body .main .contactus .btn-info {
+    background-color: #3c3c3c;
+    border: none;
+    text-align: center;
+    border-radius: 0;
+    border: 1px solid green; }
 
 /*# sourceMappingURL=style.prefixed.css.map */
