--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 * {
-	// border: 1px solid red;	
+	border: 1px solid red;	
 
 	// border: 1px solid green;
 }
@@ -200,6 +200,40 @@ body {
 				background-image: url("http://i68.tinypic.com/14t1z01.png");
 			}
 		}
-
+		.contactus {
+			.quadro {
+				border: 2px solid black;
+				margin: 160px 0;
+				padding-bottom: 60px;
+				h1 {
+					font-size: 55.94px;
+					font-family: "Lato";
+					color: rgb( 60, 60, 60 );
+					font-weight: bold;
+					text-transform: uppercase;
+					text-align: center;
+					width: 420px;
+					margin: 0 auto;
+					position: relative;
+					top: -40px;
+					background-color: white;
+				}
+				p {
+					display: block;
+					margin: 0 auto;
+					margin-top: 50px;
+					text-align: center;
+				}
+			}
+		}
+		.contactus {
+			.btn-info {
+				background-color: rgb( 60, 60, 60 );
+				border: none;
+				text-align: center;
+				border-radius: 0;
+				border: 1px solid green;
+			}
+		}
 	}
 }
