--- a/sass/style.scss
+++ b/sass/style.scss
@@ -256,7 +256,7 @@ body {
 			.quadro {
 				border-style: solid;
     			border-width: 0 3px 3px 3px;
-				margin: 160px 0;
+				margin: 160px 0 40px 0;
 				padding-bottom: 60px;
 				text-align: center;
 				position: relative;
@@ -293,7 +293,7 @@ body {
 					margin: 0 auto;
 					text-align: center;
 				}
-				.btn-info {
+				.buttonContact {
 				background-color: rgb( 60, 60, 60 );
 				border: none;
 				text-align: center;
@@ -302,6 +302,13 @@ body {
 				width: 400px;
 				height: 50px;
 				}
+			}
+		}
+		.footer {
+			text-align: center;
+			margin-bottom: 40px;
+			img {
+				margin-right: 30px;
 			}
 		}
 	}
