--- a/sass/style.scss
+++ b/sass/style.scss
@@ -171,6 +171,8 @@ body {
 					font-family: "Lato";
 					position: relative;
 					top: -30px;
+					color: black;
+					margin-bottom: 0;
 				}
 				h1:before {
 					  content: "";
@@ -178,8 +180,8 @@ body {
 					  height: 0px;
 					  border-bottom: 3px solid black;
 					  top: 30px;
-					  width: 160px;
-					  right: 125%;
+					  width: 141px;
+					  right: 130%;
  					  margin-right: 15px;
 				}
 				h1:after {
@@ -188,16 +190,15 @@ body {
 					  height: 0px;
 					  border-bottom: 3px solid black;
 					  top: 30px;
-					  width: 160px;
-					  left: 125%;
- 					  margin-left: 15px;
+				  	  width: 141px;
+					  left: 130%;
+ 					  margin-left: 15px;	
 				}
 				a > img {
-					display: block;
+					display: inline-block;
 					margin: 0 auto;
 					transition: 1s;
 					width: 100px;
-					margin-top: 100px;
 				}
 				a > img:hover  {
 					transform: rotate(360deg);
