--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -1,3 +1,6 @@
+* {
+  border: 1px solid red; }
+
 .container {
   max-width: 900px;
   width: 100%;
@@ -167,12 +170,12 @@ body .main {
       width: 141px;
       left: 130%;
       margin-left: 15px; }
-    body .main .whatwedo .quadro a > img {
+    body .main .whatwedo .quadro a img {
       display: inline-block;
       margin: 0 auto;
       transition: 1s;
       width: 100px; }
-    body .main .whatwedo .quadro a > img:hover {
+    body .main .whatwedo .quadro a img:hover {
       -webkit-transform: rotate(360deg);
               transform: rotate(360deg); }
     body .main .whatwedo .quadro h3 {
@@ -182,7 +185,8 @@ body .main {
       display: block;
       margin: 0 auto;
       margin-top: 40px;
-      text-align: center; }
+      text-align: center;
+      margin-bottom: 40px; }
   body .main .ourworks .pic1 {
     width: 548px;
     height: 237px;
@@ -256,11 +260,37 @@ body .main {
       border-radius: 0;
       margin-top: 50px;
       width: 400px;
-      height: 50px; }
+      height: 40px; }
   body .main .footer {
     text-align: center;
     margin-bottom: 40px; }
     body .main .footer img {
       margin-right: 30px; }
+
+@media (max-width: 766px) {
+  body .textcontainer {
+    max-width: 240px;
+    width: 100%; }
+  body .smalltextcontainer {
+    max-width: 180px;
+    width: 100%; }
+  body .smalltext {
+    font-size: 12px; }
+  body .bigtext {
+    font-size: 15px; }
+  body .main .header {
+    height: 400px; }
+    body .main .header .eclipse {
+      margin-top: 5px; }
+    body .main .header p {
+      margin-top: 5px; }
+    body .main .header a > img {
+      margin-top: 5px; } }
+@media (min-width: 768px) and (max-width: 991px) {
+  body .main .header {
+    height: 400px; } }
+@media (min-width: 992px) and (max-width: 1199px) {
+  body .main .header {
+    height: 600px; } }
 
 /*# sourceMappingURL=style.prefixed.css.map */
