--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 * {
-	// border: 1px solid red;	
+	border: 1px solid red;	
 
 	// border: 1px solid green;
 }
@@ -194,14 +194,16 @@ body {
 					  left: 130%;
  					  margin-left: 15px;	
 				}
-				a > img {
-					display: inline-block;
-					margin: 0 auto;
-					transition: 1s;
-					width: 100px;
-				}
-				a > img:hover  {
-					transform: rotate(360deg);
+				a {
+					img {
+						display: inline-block;
+						margin: 0 auto;
+						transition: 1s;
+						width: 100px;
+					}
+					img:hover  {
+						transform: rotate(360deg);
+					}
 				}
 				h3 {
 					text-align: center;
@@ -212,6 +214,7 @@ body {
 					margin: 0 auto;
 					margin-top: 40px;
 					text-align: center;
+					margin-bottom: 40px;
 				}
 			}
 		}
@@ -301,7 +304,7 @@ body {
 				border-radius: 0;
 				margin-top: 50px;
 				width: 400px;
-				height: 50px;
+				height: 40px;
 				}
 			}
 		}
@@ -313,4 +316,57 @@ body {
 			}
 		}
 	}
+}
+@media (max-width: 766px) {
+body {
+	.textcontainer {
+	max-width: 240px;
+	width: 100%;
+	}
+	.smalltextcontainer {
+	max-width: 180px;
+	width: 100%;
+	}
+	.smalltext {
+	  font-size: 12px;
+	}
+	.bigtext {
+	font-size: 15px;
+	}
+	.main {
+		.header {
+			height: 400px;
+			.eclipse {
+				margin-top: 5px;
+			}
+			p {
+				margin-top: 5px;
+			}
+			a > img {
+				margin-top: 5px;
+			}
+		}
+	}
+}
+}
+@media(min-width: 768px) and (max-width: 991px) {
+body {
+	.main {
+		.header {
+			height: 400px;
+		}
+	}
+}
+}
+@media(min-width: 992px) and (max-width: 1199px) {
+body {
+	.main {
+		.header {
+			height: 600px;
+		}
+	}
+}
+}
+@media (min-width: 1200px) {
+
 }
