--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 * {
 	margin: 0 auto;
+
 }
 .container {
 	max-width: 900px;
@@ -225,6 +226,14 @@ body {
 				background-image: url("http://i64.tinypic.com/2ef0vwm.png");
 				background-size: cover;
 				background-position: center;
+				margin-bottom: 2px;
+				padding-top: 150px;
+				span {
+					font-size: 40px;
+					font-family: "Lato";
+					color: white;
+					margin-left: 20px;
+				}
 			}
 			.pic2 {
 				width: 802px;
@@ -233,6 +242,14 @@ body {
 				background-image: url("http://i63.tinypic.com/4joysl.png");
 				background-size: cover;
 				background-position: center;
+				margin-bottom: 2px;
+				padding-top: 150px;
+				span {
+					font-size: 40px;
+					font-family: "Lato";
+					color: white;
+					margin-left: 20px;
+				}
 			}
 			.pic3 {
 				width: 550px;
@@ -241,6 +258,14 @@ body {
 				background-image: url("http://i67.tinypic.com/dn28w4.png");
 				background-size: cover;
 				background-position: center;
+				margin-bottom: 2px;
+				padding-top: 150px;
+				span {
+					font-size: 40px;
+					font-family: "Lato";
+					color: white;
+					margin-left: 20px;
+				}
 			}
 			.pic4 {
 				width: 548px;
@@ -249,6 +274,14 @@ body {
 				background-image: url("http://i66.tinypic.com/10cuigx.png");
 				background-size: cover;
 				background-position: center;
+				margin-bottom: 2px;
+				padding-top: 150px;
+				span {
+					font-size: 40px;
+					font-family: "Lato";
+					color: white;
+					margin-left: 20px;
+				}
 			}
 			.pic5 {
 				width: 802px;
@@ -257,6 +290,14 @@ body {
 				background-image: url("http://i68.tinypic.com/x8vvc.png");
 				background-size: cover;
 				background-position: center;
+				margin-bottom: 2px;
+				padding-top: 150px;
+				span {
+					font-size: 40px;
+					font-family: "Lato";
+					color: white;
+					margin-left: 20px;
+				}
 			}
 			.pic6 {
 				width: 550px;
@@ -265,6 +306,14 @@ body {
 				background-image: url("http://i68.tinypic.com/14t1z01.png");
 				background-size: cover;
 				background-position: center;
+				margin-bottom: 2px;
+				padding-top: 150px;
+				span {
+					font-size: 40px;
+					font-family: "Lato";
+					color: white;
+					margin-left: 20px;
+				}
 			}
 		}
 		.contactus {
