--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -194,42 +194,84 @@ body .main {
     display: inline-block;
     background-image: url("http://i64.tinypic.com/2ef0vwm.png");
     background-size: cover;
-    background-position: center; }
+    background-position: center;
+    margin-bottom: 2px;
+    padding-top: 150px; }
+    body .main .ourworks .pic1 span {
+      font-size: 40px;
+      font-family: "Lato";
+      color: white;
+      margin-left: 20px; }
   body .main .ourworks .pic2 {
     width: 802px;
     height: 237px;
     display: inline-block;
     background-image: url("http://i63.tinypic.com/4joysl.png");
     background-size: cover;
-    background-position: center; }
+    background-position: center;
+    margin-bottom: 2px;
+    padding-top: 150px; }
+    body .main .ourworks .pic2 span {
+      font-size: 40px;
+      font-family: "Lato";
+      color: white;
+      margin-left: 20px; }
   body .main .ourworks .pic3 {
     width: 550px;
     height: 237px;
     display: inline-block;
     background-image: url("http://i67.tinypic.com/dn28w4.png");
     background-size: cover;
-    background-position: center; }
+    background-position: center;
+    margin-bottom: 2px;
+    padding-top: 150px; }
+    body .main .ourworks .pic3 span {
+      font-size: 40px;
+      font-family: "Lato";
+      color: white;
+      margin-left: 20px; }
   body .main .ourworks .pic4 {
     width: 548px;
     height: 237px;
     display: inline-block;
     background-image: url("http://i66.tinypic.com/10cuigx.png");
     background-size: cover;
-    background-position: center; }
+    background-position: center;
+    margin-bottom: 2px;
+    padding-top: 150px; }
+    body .main .ourworks .pic4 span {
+      font-size: 40px;
+      font-family: "Lato";
+      color: white;
+      margin-left: 20px; }
   body .main .ourworks .pic5 {
     width: 802px;
     height: 237px;
     display: inline-block;
     background-image: url("http://i68.tinypic.com/x8vvc.png");
     background-size: cover;
-    background-position: center; }
+    background-position: center;
+    margin-bottom: 2px;
+    padding-top: 150px; }
+    body .main .ourworks .pic5 span {
+      font-size: 40px;
+      font-family: "Lato";
+      color: white;
+      margin-left: 20px; }
   body .main .ourworks .pic6 {
     width: 550px;
     height: 237px;
     display: inline-block;
     background-image: url("http://i68.tinypic.com/14t1z01.png");
     background-size: cover;
-    background-position: center; }
+    background-position: center;
+    margin-bottom: 2px;
+    padding-top: 150px; }
+    body .main .ourworks .pic6 span {
+      font-size: 40px;
+      font-family: "Lato";
+      color: white;
+      margin-left: 20px; }
   body .main .contactus .quadro {
     border-style: solid;
     border-width: 0 3px 3px 3px;
